--- a/views/my-posts.ejs
+++ b/views/my-posts.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Posts - PostJini</title>
+    <title>PostJini</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
         tailwind.config = {
@@ -17,6 +17,7 @@
             }
         }
     </script>
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
 </head>
 <body class="bg-gray-50 min-h-screen">
     <%- include('partials/navbar') %>
